--- a/faq-accordion-main/index.html
+++ b/faq-accordion-main/index.html
@@ -30,41 +30,68 @@
 
 <body>
 
-    <div class="accordion">
+    <div class="accordion_container">
 
         <div class="heading">
-            <img src="./assets/images/icon-star.svg" alt="star-icon" >
+            <img src="./assets/images/icon-star.svg" alt="star-icon">
             <h1>FAQs</h1>
         </div>
 
+        <section>
+            <div class="accordion">
+                <h2>What is Frontend Mentor, and how will it help me?</h2>
+                <img src="./assets/images/icon-plus.svg" alt="icon-plus">
+            </div>
+            <div class="panel">
+                <p>
+                    Frontend Mentor offers realistic coding challenges to help developers improve their
+                    frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for
+                    all levels and ideal for portfolio building.
+                </p>
+            </div>
 
 
-        What is Frontend Mentor, and how will it help me?
+            <div class="accordion">
+                <h2>Is Frontend Mentor free?</h2>
+                <img src="./assets/images/icon-plus.svg" alt="icon-plus">
+            </div>
+            <div class="panel">
+                <p>
+                    Yes, Frontend Mentor offers both free and premium coding challenges, with the free
+                    option providing access to a range of projects suitable for all skill levels.
+                </p>
+            </div>
 
-        Frontend Mentor offers realistic coding challenges to help developers improve their
-        frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for
-        all levels and ideal for portfolio building.
+            <div class="accordion">
+                <h2>Can I use Frontend Mentor projects in my portfolio?</h2>
+                <img src="./assets/images/icon-plus.svg" alt="icon-plus">
+            </div>
+            <div class="panel">
+                <p>
+                    Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
+                    way to showcase your skills to potential employers!
+                </p>
+            </div>
 
-        Is Frontend Mentor free?
-
-        Yes, Frontend Mentor offers both free and premium coding challenges, with the free
-        option providing access to a range of projects suitable for all skill levels.
-
-        Can I use Frontend Mentor projects in my portfolio?
-
-        Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
-        way to showcase your skills to potential employers!
-
-        How can I get help if I'm stuck on a Frontend Mentor challenge?
-
-        The best place to get help is inside Frontend Mentor's Discord community. There's a help
-        channel where you can ask questions and seek support from other community members.
+            <div class="accordion">
+                <h2>How can I get help if I'm stuck on a Frontend Mentor challenge?</h2>
+                <img src="./assets/images/icon-plus.svg" alt="icon-plus">
+            </div>
+            <div class="panel">
+                <p>
+                    The best place to get help is inside Frontend Mentor's Discord community. There's a help
+                    channel where you can ask questions and seek support from other community members.
+                </p>
+            </div>
+        </section>
     </div>
 
     <div class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
         Coded by <a href="https://devabhijit.in">Abhijit Paul</a>.
     </div>
+
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
