--- a/faq-accordion-main/index.html
+++ b/faq-accordion-main/index.html
@@ -73,7 +73,7 @@
                 </p>
             </div>
 
-            <div class="accordion">
+            <div class="accordion border-none">
                 <h2>How can I get help if I'm stuck on a Frontend Mentor challenge?</h2>
                 <img src="./assets/images/icon-plus.svg" alt="icon-plus">
             </div>
