--- a/product-preview-card-component-main/index.html
+++ b/product-preview-card-component-main/index.html
@@ -20,7 +20,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css" />
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
@@ -36,9 +36,36 @@
   </head>
 
   <body>
-    Perfume Gabrielle Essence Eau De Parfum A floral, solar and voluptuous
-    interpretation composed by Olivier Polge, Perfumer-Creator for the House of
-    CHANEL. $149.99 $169.99 Add to Cart
+    <main>
+      <article class="product-card">
+        <figure>
+          <img src="./images/image-product-mobile.jpg" alt="product-image" />
+        </figure>
+
+        <section>
+          <p class="subtitle">Perfume</p>
+
+          <h1>Gabrielle Essence Eau De Parfum</h1>
+
+          <p class="product-description">
+            A floral, solar and voluptuous interpretation composed by Olivier
+            Polge, Perfumer-Creator for the House of CHANEL.
+          </p>
+
+          <div class="price-wrapper">
+            <p>$149.99</p>
+            <p>$169.99</p>
+          </div>
+
+          <div>
+            <button>
+              <img src="./images/icon-cart.svg" alt="Cart-Icon" />
+              Add to Cart
+            </button>
+          </div>
+        </section>
+      </article>
+    </main>
 
     <div class="attribution">
       Challenge by
