finish: nft card ui

--- a/nft-preview-card-component-main/index.html
+++ b/nft-preview-card-component-main/index.html
@@ -40,6 +40,9 @@
             src="./images/image-equilibrium.jpg"
             alt="Image of Equilibrium"
           />
+          <div>
+            <img src="./images/icon-view.svg" alt="">
+          </div>
         </figure>
 
         <section class="nft__info">
