--- a/news-homepage-main/index.html
+++ b/news-homepage-main/index.html
@@ -57,22 +57,30 @@
       <section class="main__content">
         <section class="hero">
           <figure>
-            <img
-              src="./assets/images/image-web-3-mobile.jpg"
-              alt="Image of web3"
-            />
+            <picture>
+              <source
+                srcset="./assets/images/image-web-3-desktop.jpg"
+                media="(min-width: 768px)"
+              />
+              <img
+                src="./assets/images/image-web-3-mobile.jpg"
+                alt="Image of web3"
+              />
+            </picture>
           </figure>
 
-          <div>
+          <div class="hero__info">
             <h1>The Bright Future of Web 3.0?</h1>
 
-            <p>
-              We dive into the next evolution of the web that claims to put the
-              power of the platforms back into the hands of the people. But is
-              it really fulfilling its promise?
-            </p>
+            <div>
+              <p>
+                We dive into the next evolution of the web that claims to put
+                the power of the platforms back into the hands of the people.
+                But is it really fulfilling its promise?
+              </p>
 
-            <button class="cta">Read more</button>
+              <button class="cta">Read more</button>
+            </div>
           </div>
         </section>
 
